Closed Bug 1037252 Opened 9 years ago Closed 9 years ago

--disable-ion build fails: js/src/jsobjinlines.h:458:17: error: 'TypedObject' is not a member of ' js'

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

fix
729 bytes, patch
bhackett1024
: review+
Details | Diff | Splinter Review
In file included from js/src/builtin/RegExp.cpp:17:
js/src/jsobjinlines.h:458:21: error: no member named 'TypedObject' in
      namespace 'js'; did you mean 'TypeOfObject'?
    if (obj->is<js::TypedObject>()) {
                ~~~~^~~~~~~~~~~
                    TypeOfObject
js/src/vm/Interpreter.h:313:1: note: 'TypeOfObject' declared here
TypeOfObject(JSObject *obj);
^
In file included from js/src/builtin/RegExp.cpp:17:
js/src/jsobjinlines.h:458:14: error: no matching member function for
      call to 'is'
    if (obj->is<js::TypedObject>()) {
        ~~~~~^~~~~~~~~~~~~~~~~~~
js/src/jsobj.h:1108:17: note: candidate template ignored: invalid
      explicitly-specified argument for template parameter 'T'
    inline bool is() const { return getClass() == &T::class_; }
                ^
2 errors generated.

http://mozillaproject.osuosl.org:8010/builders/runtests/builds/1745/steps/shell/logs/stdio
http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/855/steps/build/logs/stdio
Attached patch fixSplinter Review
Just one more case of header bootlegging.

In file included from js/src/builtin/RegExp.cpp:17:
In file included from js/src/jsobjinlines.h:22:
In file included from js/src/jsinferinlines.h:26:
In file included from js/src/jit/ExecutionMode-inl.h:14:
In file included from js/src/jsscriptinlines.h:14:
In file included from js/src/jit/IonAnalysis.h:15:
In file included from js/src/jit/MIR.h:23:
In file included from js/src/jit/TypedObjectPrediction.h:10:
js/src/builtin/TypedObject.h:10:2: error: test
 ^
1 error generated.
Attachment #8454165 - Flags: review?(bhackett1024)
Attachment #8454165 - Flags: review?(bhackett1024) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/e938da5fdc1a
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.