Bug 1037252 - Unbreak --disable-ion build after bug 1021790. r=bhackett